# planning-center-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
planning_center_mcp/: agent.py  queries.py  reports.py  server.py  services.py
src/: llm.py  queries.py  reports.py  server.py  services.py  sync.py
tests/: test_queries.py  test_services.py  test_smoke.py  test_sync.py
